[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["II9tka <fffxx@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1"
psycopg2-binary = "^2.9.5"
environs = "^9.5.0"
requests = "^2.28.2"
retrying = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
